handle forgot password page

--- a/src/features/auth/forget-password/forget-password.component.html
+++ b/src/features/auth/forget-password/forget-password.component.html
@@ -1,1 +1,50 @@
-<p>forget-password works!</p>
+<div class="flex flex-col  justify-center  h-full">
+  <div class="head text-center mb-12">
+    <h2 class="text-5xl font-semibold text-white_color mb-4">
+      {{ 'AUTH.FORGOT_PASSWORD_TITLE' | translate }}
+    </h2>
+    <p class="text-sm text-white_color">
+      {{ 'AUTH.FORGOT_PASSWORD_DESC' | translate }}
+    </p>
+  </div>
+
+
+
+  <div class="login_form flex justify-center mb-8">
+    <form [formGroup]="forgot_pass_form" class="login_form relative lg:w-3/5 w-full ">
+      <div class="form_group mb-14">
+        <label class="text-white_color block mb-3 " for="">
+          {{ 'AUTH.EMAIL_PLACEHOLDER' | translate }}
+        </label>
+        <div class="input_icon_group ">
+          <input id="email" formControlName="email" type="email" pInputText
+            [placeholder]="'AUTH.EMAIL_EXAMPLE' | translate" />
+          <i class="fi text-primary text-lg fi-rr-envelope"></i>
+        </div>
+        @if(forgot_pass_form.get('email')?.errors && forgot_pass_form.get('email')?.touched){
+        <div>
+          @if(forgot_pass_form.get('email')?.getError('required')){
+          <p class="p-2 text-sm text-danger_color m-0">{{ 'AUTH.EMAIL_REQ' | translate }}</p>
+          }
+          @if(forgot_pass_form.get('email')?.getError('email')){
+          <p class="p-2 text-sm text-danger_color m-0">{{ 'AUTH.EMAIL_VAILD' | translate }}</p>
+          }
+        </div>
+        }
+      </div>
+
+
+      <div class="auth_btn">
+        <p-button [loading]="isLoading()" [label]="'AUTH.SEND_OTP' | translate" [disabled]="forgot_pass_form.invalid" />
+      </div>
+    </form>
+  </div>
+
+
+  <p class="text-center text-white_color">
+    {{ 'AUTH.BACK_TO' | translate }}
+    <a class="underline" [routerLink]="['/auth/login']" routerLinkActive="router-link-active">
+      {{ 'AUTH.LOGIN' | translate }}
+    </a>
+  </p>
+</div>
