--- a/src/features/auth/login/login.component.html
+++ b/src/features/auth/login/login.component.html
@@ -15,10 +15,10 @@
         @if(loginForm.get('email')?.errors && loginForm.get('email')?.touched){
         <div>
           @if(loginForm.get('email')?.getError('required')){
-          <p class="p-2 text-sm text-danger_color m-0">{{"AUTH.EMAIL_REQ"|translate}}</p>
+          <p class="p-2 text-sm text-white_color m-0">{{"AUTH.EMAIL_REQ"|translate}}</p>
           }
           @if(loginForm.get('email')?.getError('email')){
-          <p class="p-2 text-sm text-danger_color m-0">{{"AUTH.EMAIL_VAILD"|translate}}</p>
+          <p class="p-2 text-sm text-white_color m-0">{{"AUTH.EMAIL_VAILD"|translate}}</p>
           }
         </div>
         }
@@ -39,7 +39,7 @@
         @if(loginForm.get('password')?.errors && loginForm.get('password')?.touched){
         <div>
           @if(loginForm.get('password')?.getError('required')){
-          <p class="p-2 text-sm text-danger_color m-0">{{"AUTH.PASSWORD_REQ"|translate}}</p>
+          <p class="p-2 text-sm text-white_color m-0">{{"AUTH.PASSWORD_REQ"|translate}}</p>
           }
 
         </div>
@@ -48,7 +48,7 @@
       </div>
 
       <div class="auth_btn">
-        <p-button [loading]="isLoginBtnLoading()" label="{{'AUTH.SIGN_IN' | translate}}"
+        <p-button [loading]="isLoginBtnLoading()" (onClick)="handleLogin()" label="{{'AUTH.SIGN_IN' | translate}}"
           [disabled]="loginForm.invalid" />
       </div>
 
