--- a/src/features/dashboard/devices/device-list/device-list.component.html
+++ b/src/features/dashboard/devices/device-list/device-list.component.html
@@ -237,7 +237,7 @@
       <ng-template pTemplate="emptymessage" let-columns>
         <tr>
           <td [attr.colspan]="8">
-            <!-- <app-empty-state [loadingState()]="loadingState()"></app-empty-state> -->
+            <app-empty-state [loadingState]="loadingState()"></app-empty-state>
           </td>
         </tr>
       </ng-template>
@@ -252,16 +252,17 @@
   [breakpoints]="{ '1199px': '50vw', '575px': '90vw' }" [style]="{ width: '40vw' }" [draggable]="false"
   [resizable]="false">
   <div class="icon_over_lay flex items-center round justify-center">
-    <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <rect width="40" height="40" fill="white" />
+    <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <rect width="50" height="50" fill="white" />
       <path
-        d="M22.1 5.99994L8.41658 20.4833C7.89992 21.0333 7.39992 22.1167 7.29992 22.8667L6.68325 28.2667C6.46658 30.2167 7.86658 31.55 9.79992 31.2167L15.1666 30.3C15.9166 30.1667 16.9666 29.6167 17.4833 29.05L31.1666 14.5666C33.5333 12.0666 34.6 9.21661 30.9166 5.73328C27.25 2.28328 24.4666 3.49994 22.1 5.99994Z"
-        stroke="#9F8A60" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
-      <path d="M19.8169 8.41675C20.5336 13.0167 24.2669 16.5334 28.9002 17" stroke="#9F8A60" stroke-width="2"
+        d="M27.6252 7.50004L10.521 25.6043C9.87514 26.2918 9.25014 27.6459 9.12514 28.5834L8.3543 35.3334C8.08347 37.7709 9.83347 39.4376 12.2501 39.0209L18.9585 37.8751C19.896 37.7084 21.2085 37.0209 21.8544 36.3126L38.9585 18.2084C41.9169 15.0834 43.2502 11.5209 38.646 7.16671C34.0627 2.85421 30.5835 4.37504 27.6252 7.50004Z"
+        stroke="#D51C54" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+      <path d="M24.771 10.521C25.6668 16.271 30.3335 20.6668 36.1252 21.2501" stroke="#D51C54" stroke-width="3"
         stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
-      <path d="M5 36.6667H35" stroke="#9F8A60" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"
+      <path d="M6.25 45.8335H43.75" stroke="#D51C54" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"
         stroke-linejoin="round" />
     </svg>
+
 
   </div>
   <div class=" text-center mb-8">
@@ -289,22 +290,23 @@
   [breakpoints]="{ '1199px': '50vw', '575px': '90vw' }" [style]="{ width: '35vw' }" [draggable]="false"
   [resizable]="false">
   <div class="icon_over_lay flex items-center round justify-center">
-    <svg width="40" height="40" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M45.8333 13.5417H33.3333" stroke="#9F8A60" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"
+    <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M45.8335 13.5415H33.3335" stroke="#D51C54" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"
         stroke-linejoin="round" />
-      <path d="M12.5 13.5417H4.16669" stroke="#9F8A60" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"
-        stroke-linejoin="round" />
-      <path
-        d="M20.8334 20.8333C24.8604 20.8333 28.125 17.5688 28.125 13.5417C28.125 9.51458 24.8604 6.25 20.8334 6.25C16.8063 6.25 13.5417 9.51458 13.5417 13.5417C13.5417 17.5688 16.8063 20.8333 20.8334 20.8333Z"
-        stroke="#9F8A60" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
-      <path d="M45.8333 36.4583H37.5" stroke="#9F8A60" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"
-        stroke-linejoin="round" />
-      <path d="M16.6667 36.4583H4.16669" stroke="#9F8A60" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"
+      <path d="M12.4998 13.5415H4.1665" stroke="#D51C54" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"
         stroke-linejoin="round" />
       <path
-        d="M29.1667 43.75C33.1938 43.75 36.4583 40.4854 36.4583 36.4583C36.4583 32.4312 33.1938 29.1667 29.1667 29.1667C25.1396 29.1667 21.875 32.4312 21.875 36.4583C21.875 40.4854 25.1396 43.75 29.1667 43.75Z"
-        stroke="#9F8A60" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+        d="M20.8332 20.8333C24.8603 20.8333 28.1248 17.5688 28.1248 13.5417C28.1248 9.51458 24.8603 6.25 20.8332 6.25C16.8061 6.25 13.5415 9.51458 13.5415 13.5417C13.5415 17.5688 16.8061 20.8333 20.8332 20.8333Z"
+        stroke="#D51C54" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+      <path d="M45.8333 36.4585H37.5" stroke="#D51C54" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"
+        stroke-linejoin="round" />
+      <path d="M16.6665 36.4585H4.1665" stroke="#D51C54" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"
+        stroke-linejoin="round" />
+      <path
+        d="M29.1667 43.7498C33.1938 43.7498 36.4583 40.4853 36.4583 36.4582C36.4583 32.4311 33.1938 29.1665 29.1667 29.1665C25.1396 29.1665 21.875 32.4311 21.875 36.4582C21.875 40.4853 25.1396 43.7498 29.1667 43.7498Z"
+        stroke="#D51C54" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
     </svg>
+
 
   </div>
   <div class=" text-center mb-8 flex justify-center">
@@ -341,18 +343,19 @@
   <div class="icon_over_lay flex items-center round justify-center">
     <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M35 9.96663C29.45 9.41663 23.8667 9.1333 18.3 9.1333C15 9.1333 11.7 9.29997 8.4 9.6333L5 9.96663"
-        stroke="#9F8A60" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+        stroke="#D51C54" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
       <path
-        d="M14.1665 8.28333L14.5332 6.1C14.7998 4.51666 14.9998 3.33333 17.8165 3.33333H22.1832C24.9998 3.33333 25.2165 4.58333 25.4665 6.11666L25.8332 8.28333"
-        stroke="#9F8A60" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+        d="M14.167 8.2835L14.5337 6.10016C14.8003 4.51683 15.0003 3.3335 17.817 3.3335H22.1837C25.0003 3.3335 25.217 4.5835 25.467 6.11683L25.8337 8.2835"
+        stroke="#D51C54" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
       <path
-        d="M31.4168 15.2334L30.3335 32.0167C30.1501 34.6333 30.0001 36.6667 25.3501 36.6667H14.6502C10.0002 36.6667 9.85016 34.6333 9.66683 32.0167L8.5835 15.2334"
-        stroke="#9F8A60" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-      <path d="M17.2168 27.5H22.7668" stroke="#9F8A60" stroke-width="2" stroke-linecap="round"
+        d="M31.4163 15.2334L30.333 32.0167C30.1496 34.6334 29.9996 36.6667 25.3496 36.6667H14.6497C9.99967 36.6667 9.84967 34.6334 9.66634 32.0167L8.58301 15.2334"
+        stroke="#D51C54" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+      <path d="M17.2168 27.5H22.7668" stroke="#D51C54" stroke-width="2" stroke-linecap="round"
         stroke-linejoin="round" />
-      <path d="M15.8335 20.8333H24.1668" stroke="#9F8A60" stroke-width="2" stroke-linecap="round"
+      <path d="M15.833 20.8335H24.1663" stroke="#D51C54" stroke-width="2" stroke-linecap="round"
         stroke-linejoin="round" />
     </svg>
+
 
   </div>
   <div class=" text-center mb-8">
