--- a/src/features/dashboard/devices/chart-vs350/chart-vs350.component.html
+++ b/src/features/dashboard/devices/chart-vs350/chart-vs350.component.html
@@ -43,7 +43,7 @@
         <button (click)="filterVisiblle = true" class="expand_filter">
           <i class="fi text-lg fi-rr-calendar"></i>
         </button>
-        <button class="expand_filter">
+        <button (click)="handleExportExcel()" class="expand_filter">
           <i class="fi fi-rr-file-export"></i>
         </button>
       </div>
