--- a/src/features/auth/login/login.component.html
+++ b/src/features/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col  justify-center  h-full">
+<div class="flex flex-col  justify-center  h-full p-4">
   <div class="head text-center mb-12">
     <h2 class="text-5xl font-semibold text-white_color mb-4">{{"AUTH.SIGN_IN"|translate}}</h2>
     <p class="text-sm text-white_color">{{"AUTH.LOGIN_PAGE_TITLE"|translate}}</p>
