--- a/src/features/dashboard/index/index.component.html
+++ b/src/features/dashboard/index/index.component.html
@@ -14,8 +14,8 @@
     <div class="app-layout__main-content__navbar">
       <app-breadcrumb></app-breadcrumb>
     </div>
-    <div class="app-layout__main-content__inner-pages   p-8 pb-4 ">
-      <div [dir]="is_ar() ? 'rtl':'ltr'" class="mb-12 md:mt-0 mt-16">
+    <div class="app-layout__main-content__inner-pages    p-8 pb-4 ">
+      <div [dir]="is_ar() ? 'rtl':'ltr'" class="mb-12 sm:mt-0 mt-28">
         <router-outlet></router-outlet>
       </div>
       <!-- <app-footer></app-footer> -->
