handle 3 charts from ews device

--- a/src/features/dashboard/devices/device-list/device-list.component.html
+++ b/src/features/dashboard/devices/device-list/device-list.component.html
@@ -326,7 +326,7 @@
     <div class="custom_input mb-6">
       <label for="" class="mb-2 block">{{ 'DEVICES.COMM_TYPE' | translate }}</label>
       <p-dropdown [options]="types" appendTo="body" [(ngModel)]="filterObj.type" optionValue="name"
-        [showClear]="filterObj.type" optionLabel="name" [placeholder]="'DEVICES.SELECT_STATUS' | translate" />
+        [showClear]="filterObj.type" optionLabel="name" [placeholder]="'DEVICES.COMM_TYPE' | translate" />
     </div>
   </div>
   <ng-template pTemplate="footer">
