--- a/src/features/dashboard/users-management/users-list/users-list.component.html
+++ b/src/features/dashboard/users-management/users-list/users-list.component.html
@@ -7,7 +7,7 @@
         @if(loadingState()){
         <p-skeleton width="100%" styleClass="mb-2" />
         }@else {
-        <p class="text-xl font-semibold">{{usersData()?.total}}</p>
+        <p class="text-xl font-semibold">{{usersData()?.metadata?.totalUsers}}</p>
         }
       </div>
       <div class="icon">
@@ -35,7 +35,7 @@
         @if(loadingState()){
         <p-skeleton width="100%" styleClass="mb-2" />
         }@else {
-        <p class="text-xl font-semibold">{{usersData()?.active}}</p>
+        <p class="text-xl font-semibold">{{usersData()?.metadata?.activeUsers}}</p>
         }
       </div>
       <div class="icon">
@@ -55,7 +55,7 @@
         @if(loadingState()){
         <p-skeleton width="100%" styleClass="mb-2" />
         }@else {
-        <p class="text-xl font-semibold">{{usersData()?.inactive}}</p>
+        <p class="text-xl font-semibold">{{usersData()?.metadata?.inactiveUsers}}</p>
         }
       </div>
       <div class="icon">
@@ -77,7 +77,7 @@
     <div class="table_head m-2 flex flex-wrap items-center justify-between">
       <div class="flex items-center gap-3">
         <h2 class="font-medium mb-3 text-2xl">{{ 'USERS.USERS' | translate }}</h2>
-        <div (click)="showFilter.set(true)"
+        <!-- <div (click)="showFilter.set(true)"
           [ngClass]="{'bg-primary':filterObj.status || filterObj.type , 'text-white_color':filterObj.status || filterObj.type , 'bg-white_color':!filterObj.status && !filterObj.type}"
           class="icon_filter relative cursor-pointer  shadow p-4">
           @if(filterCount){
@@ -85,7 +85,7 @@
             {{filterCount}}</div>
           }
           <i class="fi fi-rr-settings-sliders text-lg"></i>
-        </div>
+        </div> -->
       </div>
       <div class="flex items-center gap-4 flex-wrap flex-row-reverse">
         <button [routerLink]="['/iotech_app/users-management/action']"
@@ -99,8 +99,8 @@
         </div>
       </div>
     </div>
-    <p-table [paginator]="true" [totalRecords]="usersList.length" (onLazyLoad)="getUsersList()" [lazy]="true"
-      [rows]="per_page" [tableStyle]="{'min-width': '50rem'}" [value]="usersListTemp">
+    <p-table [paginator]="true" [totalRecords]="usersData()?.totalItems" (onLazyLoad)="getUsersList($event)"
+      [lazy]="true" [rows]="per_page" [tableStyle]="{'min-width': '50rem'}" [value]="usersListTemp">
       <ng-template pTemplate="header" let-columns>
         <tr>
           <th>{{ 'USERS.USER_NAME' | translate }}</th>
@@ -196,6 +196,57 @@
       <div class="action_btn">
         <p-button (click)="handleFilterList()" [disabled]="!filterObj.status && !filterObj.type"
           [label]="'USERS.APPLY_FILTER' | translate" />
+      </div>
+    </div>
+  </ng-template>
+</p-dialog>
+
+
+
+
+<!-- delete  -->
+
+
+
+<p-dialog header="" styleClass="select_type_popup" [(visible)]="showDeletePopUp" [dismissableMask]="true" [modal]="true"
+  [breakpoints]="{ '1199px': '50vw', '575px': '90vw' }" [style]="{ width: '40vw' }" [draggable]="false"
+  [resizable]="false">
+  <div class="icon_over_lay flex items-center round justify-center">
+    <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M35 9.96663C29.45 9.41663 23.8667 9.1333 18.3 9.1333C15 9.1333 11.7 9.29997 8.4 9.6333L5 9.96663"
+        stroke="#D51C54" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+      <path
+        d="M14.167 8.2835L14.5337 6.10016C14.8003 4.51683 15.0003 3.3335 17.817 3.3335H22.1837C25.0003 3.3335 25.217 4.5835 25.467 6.11683L25.8337 8.2835"
+        stroke="#D51C54" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+      <path
+        d="M31.4163 15.2334L30.333 32.0167C30.1496 34.6334 29.9996 36.6667 25.3496 36.6667H14.6497C9.99967 36.6667 9.84967 34.6334 9.66634 32.0167L8.58301 15.2334"
+        stroke="#D51C54" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+      <path d="M17.2168 27.5H22.7668" stroke="#D51C54" stroke-width="2" stroke-linecap="round"
+        stroke-linejoin="round" />
+      <path d="M15.833 20.8335H24.1663" stroke="#D51C54" stroke-width="2" stroke-linecap="round"
+        stroke-linejoin="round" />
+    </svg>
+
+
+  </div>
+  <div class=" text-center mb-8">
+    <h5 class="text-2xl  text-primary font-medium ">{{ 'USERS.DELETE_USER_TITLE' | translate }}</h5>
+    <p class="text-primary/50">{{ 'USERS.DELETE_CONFIRM_MSG' | translate }} <strong>{{ 'USERS.DELETE_USER' | translate
+        }}</strong> </p>
+  </div>
+  <div class="devices_types__container ">
+    <div class="form-group mb-5">
+      <div class="custom_input ">
+        <input #confirm_input id="name" class="custom_input" pInputText
+          [placeholder]="'USERS.DELETE_PLACEHOLDER' | translate" />
+      </div>
+    </div>
+  </div>
+  <ng-template pTemplate="footer">
+    <div class="flex justify-center">
+      <div class="action_btn">
+        <p-button (onClick)="handleDeleteUser()" [disabled]="confirm_input.value.toLocaleLowerCase() !== 'delete'"
+          [label]="'DEVICES.DELETE' | translate" />
       </div>
     </div>
   </ng-template>
