--- a/src/features/dashboard/users-management/view/view.component.html
+++ b/src/features/dashboard/users-management/view/view.component.html
@@ -5,7 +5,7 @@
         <i class="fi fi-rr-circle-user text-4xl"></i>
       </div>
       <div class="content">
-        @if(loading_data){
+        @if(loading_data()){
         <p-skeleton width="10rem" />
         <p-skeleton width="10rem" />
         }@else {
@@ -18,15 +18,15 @@
     <div class="content grid grid-cols-12 gap-8 mb-8">
       <div class=" col-span-12 md:col-span-6 flex items-center gap-12">
         <span class="text-xl font-semibold">{{"USERS.Role"|translate}}</span>
-        @if(loading_data){
+        @if(loading_data()){
         <p-skeleton width="10rem" />
         }@else {
-        <span class="text-base">{{userDataShow?.roles[0]}}</span>
+        <span class="text-base">{{userDataShow?.roles[0]?.name}}</span>
         }
       </div>
       <div class=" col-span-12 md:col-span-6 flex items-center gap-12">
         <span class="text-xl font-semibold">{{"USERS.Status"|translate}}</span>
-        @if(loading_data){
+        @if(loading_data()){
         <p-skeleton width="10rem" />
         }@else {
         <span [class]="userDataShow?.isActive ? 'text-success_color':'text-danger_color'"
@@ -35,7 +35,7 @@
       </div>
       <div class=" col-span-12 md:col-span-6 flex items-center gap-12">
         <span class="text-xl font-semibold">{{"USERS.PHONE"|translate}}</span>
-        @if(loading_data){
+        @if(loading_data()){
         <p-skeleton width="10rem" />
         }@else {
         <span class="text-base">{{userDataShow?.phoneNumber}}</span>
@@ -43,10 +43,10 @@
       </div>
       <div class=" col-span-12 md:col-span-6 flex items-center gap-12">
         <span class="text-xl font-semibold">{{"USERS.CREATED_AT"|translate}}</span>
-        @if(loading_data){
+        @if(loading_data()){
         <p-skeleton width="10rem" />
         }@else {
-        <span class="text-base">{{userDataShow?.createdDate}}</span>
+        <span class="text-base">{{userDataShow?.createdDate|date}}</span>
         }
       </div>
     </div>
@@ -56,7 +56,7 @@
       <h2 class="text-lg mb-6">Permission Categories</h2>
       <p-accordion [expandIcon]="'fi fi-rr-angle-small-down'" [collapseIcon]="'fi fi-rr-angle-small-up'"
         [activeIndex]="0">
-        @for(device of devicesTypes ; track device){
+        @for(device of devicesTypes() ; track device){
 
         <p-accordionTab tabStyleClass="mb-4" [header]="device.name">
           <div class="flex items-center justify-between">
