handle missing translation

--- a/src/features/dashboard/devices/chart-bos/chart-bos.component.html
+++ b/src/features/dashboard/devices/chart-bos/chart-bos.component.html
@@ -17,7 +17,7 @@
   </div>
   <div class="col-span-12 bg-white_color p-4 rounded-lg shadow">
     <div class="head mb-4 flex flex-wrap items-center justify-between">
-      <h2 class="text-lg">Chart Analysis</h2>
+      <h2 class="text-lg">{{"DEVICES.Chart_Analysis"|translate}}</h2>
 
       <div class="flex items-center flex-wrap gap-4">
         <div class="filters custom_filters flex-wrap flex items-center gap-4">
