--- a/src/features/dashboard/devices/chart-vs330/chart-vs330.component.html
+++ b/src/features/dashboard/devices/chart-vs330/chart-vs330.component.html
@@ -54,7 +54,7 @@
       {{"DEVICES.No_Data_Avaliable"|translate}}
     </div>
     }
-    <div [class]="{'hidden': loadingChart() || !current_chart_data.length}" class="chart">
+    <div [class]="{'hidden': loadingChart() || !current_chart_data.length}" class="chart overflow-x-auto">
       <p-chart #alarms_chart [width]="chartWidth+'%'" type="line" height="400px" [data]="data_alarms"
         [options]="optionsAlarm" />
     </div>
