start handle reser password

--- a/src/features/dashboard/roles-managment/list/list.component.html
+++ b/src/features/dashboard/roles-managment/list/list.component.html
@@ -47,14 +47,15 @@
       <div class="icon">
         <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
-            d="M43.5626 23.1665C43.5626 33.354 36.1667 42.8957 26.0626 45.6873C25.3751 45.8748 24.6251 45.8748 23.9376 45.6873C13.8333 42.8957 6.4375 33.354 6.4375 23.1665V14.0206C6.4375 12.3123 7.72919 10.3748 9.33335 9.72894L20.9376 4.979C23.5417 3.9165 26.4792 3.9165 29.0834 4.979L40.6876 9.72894C42.2709 10.3748 43.5834 12.3123 43.5834 14.0206L43.5626 23.1665Z"
-            stroke="#9F8A60" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+            d="M43.5624 23.1667C43.5624 33.3542 36.1666 42.8958 26.0624 45.6875C25.3749 45.875 24.6249 45.875 23.9374 45.6875C13.8332 42.8958 6.43738 33.3542 6.43738 23.1667V14.0208C6.43738 12.3124 7.72907 10.375 9.33323 9.72912L20.9374 4.97919C23.5416 3.91669 26.4791 3.91669 29.0833 4.97919L40.6874 9.72912C42.2708 10.375 43.5833 12.3124 43.5833 14.0208L43.5624 23.1667Z"
+            stroke="#D51C54" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
           <path
-            d="M25.0002 26.0418C27.3014 26.0418 29.1668 24.1764 29.1668 21.8752C29.1668 19.574 27.3014 17.7085 25.0002 17.7085C22.6989 17.7085 20.8335 19.574 20.8335 21.8752C20.8335 24.1764 22.6989 26.0418 25.0002 26.0418Z"
-            stroke="#9F8A60" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
-          <path d="M25 26.0415V32.2915" stroke="#9F8A60" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"
+            d="M25 26.0416C27.3013 26.0416 29.1667 24.1762 29.1667 21.875C29.1667 19.5738 27.3013 17.7083 25 17.7083C22.6988 17.7083 20.8334 19.5738 20.8334 21.875C20.8334 24.1762 22.6988 26.0416 25 26.0416Z"
+            stroke="#D51C54" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+          <path d="M25 26.0417V32.2917" stroke="#D51C54" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"
             stroke-linejoin="round" />
         </svg>
+
       </div>
     </div>
     <div
